CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
PROJECT(OpenFOAMReaders)

INCLUDE(GNUInstallDirs)
FIND_PACKAGE(ParaView REQUIRED)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}")

SET(BUILD_SHARED_LIBS ON)

PARAVIEW_PLUGIN_SCAN(
    PLUGIN_FILES
        "PVblockMeshReader/paraview.plugin"
        "PVFoamReader/paraview.plugin"
    PROVIDES_PLUGINS  plugins
    ENABLE_BY_DEFAULT ON
)

PARAVIEW_PLUGIN_BUILD(PLUGINS ${plugins})
