VTK_MODULE_ADD_MODULE(PVFoamReader_VTK CLASSES vtkPVFoamReader)

PARAVIEW_ADD_SERVER_MANAGER_XMLS(XMLS ../PVFoamReader_SM.xml)

TARGET_LINK_LIBRARIES(
    PVFoamReader_VTK
    LINK_PUBLIC
    vtkPVFoam
    Qt5::Core
    Qt5::Gui
)

SET_TARGET_PROPERTIES(
    PVFoamReader_VTK
    PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "$ENV{FOAM_LIBBIN}"
)
