VTK_MODULE_ADD_MODULE(PVFoamReader_VTK CLASSES vtkPVFoamReader)

SET_TARGET_PROPERTIES(
    PVFoamReader_VTK
    PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "$ENV{PV_PLUGIN_PATH}"
)

IF(NOT PARAVIEW_QT_MAJOR_VERSION)
    set(PARAVIEW_QT_MAJOR_VERSION 5)
ENDIF()

TARGET_LINK_LIBRARIES(
    PVFoamReader_VTK
    LINK_PUBLIC
    vtkPVFoam
    finiteVolume
    OpenFOAM
    Qt${PARAVIEW_QT_MAJOR_VERSION}::Core
    Qt${PARAVIEW_QT_MAJOR_VERSION}::Gui
)
