VTK_MODULE_ADD_MODULE(PVblockMeshReader_VTK CLASSES vtkPVblockMeshReader)

SET_TARGET_PROPERTIES(
    PVblockMeshReader_VTK
    PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "$ENV{PV_PLUGIN_PATH}"
)

IF(NOT PARAVIEW_QT_MAJOR_VERSION)
    set(PARAVIEW_QT_MAJOR_VERSION 5)
ENDIF()

TARGET_LINK_LIBRARIES(
    PVblockMeshReader_VTK
    LINK_PUBLIC
    vtkPVblockMesh
    OpenFOAM
    Qt${PARAVIEW_QT_MAJOR_VERSION}::Core
    Qt${PARAVIEW_QT_MAJOR_VERSION}::Gui
)
